[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/game_over.png" type="Texture" id=1]
[ext_resource path="res://textures/quit button.png" type="Texture" id=2]
[ext_resource path="res://nodes/ui/GameOver.gd" type="Script" id=3]
[ext_resource path="res://shaders/postprocessLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/retry button.png" type="Texture" id=5]
[ext_resource path="res://nodes/ui/quitButton.gd" type="Script" id=6]
[ext_resource path="res://fonts/DOTMATRI.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="gameOver" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="TextureButton" parent="."]
margin_left = 1353.09
margin_top = 758.611
margin_right = 1865.09
margin_bottom = 1014.61
shortcut_in_tooltip = false
button_mask = 3
texture_normal = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retryButton" type="TextureButton" parent="."]
margin_left = 1358.26
margin_top = 417.43
margin_right = 1870.26
margin_bottom = 673.43
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="budgetLabel" type="Label" parent="."]
margin_left = 127.943
margin_top = 270.102
margin_right = 973.943
margin_bottom = 319.102
custom_fonts/font = SubResource( 1 )
text = "Your budget survived for X seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="postprocessLayer" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="quitButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="retryButton" to="." method="_on_retryButton_pressed"]
